<resources>
    <string name="app_name">SPU111</string>

    <string name="main_title">Основи Android</string>
    <string name="main_calc_button">Калькулятор</string>
    <string name="main_rates_button">Курси валют</string>
    <string name="main_chat_button">Chat</string>
    <string name="rates_title">Курси валют НБУ</string>

    <!--Chat-->
    <string name="chat_title">Чат</string>
    <string name="chat_nik">Введите ник: </string>
    <string name="chat_nik_default">Iriwa </string>
    <string name="chat_msg">Message: </string>
    <string name="chat_msg_default">Привіт </string>
    <string name="chat_semantic_send">Send</string>
    <!--endregion-->
    <!--region Animation-->
    <string name="anim_title">Анімації</string>
    <string name="alpha_title">Прозорість</string>
    <string name="scale1_title">Маштаб справа-знизу</string>
    <string name="scale2_title">Маштаб</string>
    <string name="rotate_title">Поворот</string>
    <string name="trans_title">Трансляція</string>
    <!--endregion-->

    <!--region Game-->
    <string name="game_title">Swipe: game</string>
    <string name="game_main_text">2048</string>
    <string name="game_digit_4">4</string>
    <string name="game_digit_8">8</string>
    <string name="game_digit_16">16</string>
    <string name="game_digit_32">32</string>
    <string name="game_digit_64">64</string>
    <string name="game_digit_128">128</string>
    <string name="game_digit_256">256</string>
    <string name="game_digit_512">512</string>
    <string name="game_digit_1024">1024</string>
    <string name="game_digit_2048">2048</string>

    <string name="game_score_tpl">SCORE\n%d</string>
    <string name="game_best_score_tpl">BEST\n%d</string>
    <string name="game_new_game">NEW</string>
    <string name="game_undo">UNDO</string>
    <!--endregion-->
    <!--  region      Calculator       -->
    <string name="calc_title">Калькулятор</string>
    <string name="calc_btn_percent">%</string>
    <string name="calc_btn_c">C</string>
    <string name="calc_btn_ce">CE</string>
    <string name="calc_btn_backspace">\u232B</string>
    <string name="calc_btn_digit_0">0</string>
    <string name="calc_btn_digit_1">1</string>
    <string name="calc_btn_digit_2">2</string>
    <string name="calc_btn_digit_3">3</string>
    <string name="calc_btn_digit_4">4</string>
    <string name="calc_btn_digit_5">5</string>
    <string name="calc_btn_digit_6">6</string>
    <string name="calc_btn_digit_7">7</string>
    <string name="calc_btn_digit_8">8</string>
    <string name="calc_btn_digit_9">9</string>
    <string name="calc_btn_dot">,</string>
    <string name="calc_btn_operation_plus">+</string>
    <string name="calc_btn_operation_minus">—</string>
    <string name="calc_btn_operation_multiply">\u2715</string>
    <string name="calc_btn_operation_divide">\u00F7</string>
    <string name="calc_btn_equal">\u003D</string>
    <string name="calc_btn_sign_toggle">+/-</string>
    <string name="calc_btn_square">x²</string>
    <string name="calc_btn_sqrt">√x</string>
    <string name="calc_btn_inverse">1/x</string>
    <string name="calc_minus_sign">\u2212</string>
    <string name="calc_msg_max_digits">Ліміт цифр досягнуто</string>
    <string name="calc_msg_two_dots">Кома може бути лише одна</string>
    <string name="calc_msg_minus_zero">Нуль не може бути від\'ємним</string>
    <string name="calc_msg_overflow">OVERFLOW</string>
    <string name="calc_msg_divide_by_zero">Ділення на нуль заборонено</string>
    <string name="calc_msg_negative_sqrt">Значення не може бути менше 0</string>
    <!--endregion-->
</resources>