<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/calc_layout"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/calc_background"
    tools:context=".CalcActivity">

<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:text="@string/calc_title"
    android:textColor="@color/calc_result_foreground"
    />

 <TextView
     android:id="@+id/calc_tv_history"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:gravity="end"
     android:layout_gravity="end"
     android:layout_marginHorizontal="5dp"
     android:layout_marginVertical="10dp"
     android:textColor="@color/calc_history_foreground"
     android:textSize="20sp"
     tools:text="2 + 3 ="

     />

 <TextView
     android:id="@+id/calc_tv_result"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:gravity="end"
     android:layout_gravity="end"
     android:layout_marginHorizontal="5dp"
     android:layout_marginTop="1dp"
     android:layout_marginBottom="40dp"
     android:textSize="46sp"
     tools:text="5"
     android:textColor="@color/calc_result_foreground"
     />
 <TableLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingHorizontal="5dp">

     <TableRow
         android:layout_height="0dp"
         android:layout_weight="1">
      <Button
          android:id="@+id/calc_btn_percent"
          android:text="@string/calc_btn_percent"
          style="@style/calc_btn_action"
          />
      <Button
          android:id="@+id/calc_btn_ce"
          android:text="@string/calc_btn_ce"
          style="@style/calc_btn_action"/>
      <Button
          android:id="@+id/calc_btn_c"
          android:text="@string/calc_btn_c"
          style="@style/calc_btn_action"
          />
      <Button
          android:id="@+id/calc_btn_backspace"
          android:text="@string/calc_btn_backspace"
          style="@style/calc_btn_action"/>

     </TableRow>
  <TableRow android:layout_height="0dp"
      android:layout_weight="1">
   <Button
       android:id="@+id/calc_btn_inverse"
       android:text="@string/calc_btn_inverse"
       style="@style/calc_btn_action"
       />
   <Button
       android:id="@+id/calc_btn_square"
       android:text="@string/calc_btn_square"
       style="@style/calc_btn_action"/>
   <Button
       android:id="@+id/calc_btn_sqrt"
       android:text="@string/calc_btn_sqrt"
       style="@style/calc_btn_action"
       />
   <Button
       android:id="@+id/calc_btn_divide"
       android:text="@string/calc_btn_operation_divide"
       style="@style/calc_btn_action"/>

  </TableRow>
  <TableRow android:layout_height="0dp"
      android:layout_weight="1">
   <Button
       android:id="@+id/calc_btn_digit_7"
       android:text="@string/calc_btn_digit_7"
       style="@style/calc_btn_digit"
       />
   <Button
       android:id="@+id/calc_btn_digit_8"
       android:text="@string/calc_btn_digit_8"
       style="@style/calc_btn_digit"/>
   <Button
       android:id="@+id/calc_btn_digit_9"
       android:text="@string/calc_btn_digit_9"
       style="@style/calc_btn_digit"
       />
   <Button
       android:id="@+id/calc_btn_multiply"
       android:text="@string/calc_btn_operation_multiply"
       style="@style/calc_btn_action"/>

  </TableRow>
  <TableRow android:layout_height="0dp"
      android:layout_weight="1">
   <Button
       android:id="@+id/calc_btn_digit_4"
       android:text="@string/calc_btn_digit_4"
       style="@style/calc_btn_digit"
       />
   <Button
       android:id="@+id/calc_btn_digit_5"
       android:text="@string/calc_btn_digit_5"
       style="@style/calc_btn_digit"/>
   <Button
       android:id="@+id/calc_btn_digit_6"
       android:text="@string/calc_btn_digit_6"
       style="@style/calc_btn_digit"
       />
   <Button
       android:id="@+id/calc_btn_minus"
       android:text="@string/calc_btn_operation_minus"
       style="@style/calc_btn_action"/>

  </TableRow>

  <TableRow android:layout_height="0dp"
      android:layout_weight="1">
   <Button
       android:id="@+id/calc_btn_digit_1"
       android:text="@string/calc_btn_digit_1"
       style="@style/calc_btn_digit"
       />
   <Button
       android:id="@+id/calc_btn_digit_2"
       android:text="@string/calc_btn_digit_2"
       style="@style/calc_btn_digit"/>
   <Button
       android:id="@+id/calc_btn_digit_3"
       android:text="@string/calc_btn_digit_3"
       style="@style/calc_btn_digit"
       />
   <Button
       android:id="@+id/calc_btn_plus"
       android:text="@string/calc_btn_operation_plus"
       style="@style/calc_btn_action"/>

  </TableRow>
  <TableRow android:layout_height="0dp"
      android:layout_weight="1">
   <Button
       android:id="@+id/calc_btn_sign_toggle"
       android:text="@string/calc_btn_sign_toggle"
       style="@style/calc_btn_action"
       />
   <Button
       android:id="@+id/calc_btn_digit_0"
       android:text="@string/calc_btn_digit_0"
       style="@style/calc_btn_digit"/>
   <Button
       android:id="@+id/calc_btn_dot"
       android:text="@string/calc_btn_dot"
       style="@style/calc_btn_action"
       />
   <Button
       android:id="@+id/calc_btn_equal"
       android:text="@string/calc_btn_equal"
       style="@style/calc_btn_equal"/>

  </TableRow>
 </TableLayout>


</LinearLayout>