<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AnimActivity"
    android:clipChildren="false"
    android:clipToPadding="false">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/anim_title"
        android:padding="2dp"
        android:layout_margin="2dp"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:padding="10dp">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:clipChildren="false">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/alpha_title"
                android:gravity="center">
            </TextView>
            <View
                android:id="@+id/anim_v_alpha"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/calc_equal_background"
                android:layout_margin="10dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:clipChildren="false">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/scale1_title"
                android:gravity="center">
            </TextView>
            <View
                android:id="@+id/anim_v_scale1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/calc_equal_background"
                android:layout_margin="10dp"/>
        </LinearLayout>


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:paddingHorizontal="10dp"
        android:clipChildren="false"
        android:clipToPadding="false">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:clipChildren="false">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/scale2_title"
                android:gravity="center">
            </TextView>
        <View
            android:id="@+id/anim_v_scale2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/calc_equal_background"
            android:layout_margin="10dp"

            /></LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:clipChildren="false">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/rotate_title"
                android:gravity="center">
            </TextView>
            <View
                android:id="@+id/anim_v_rotate1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/calc_equal_background"
                android:layout_margin="10dp"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:paddingHorizontal="10dp"
        android:paddingBottom="10dp"
        android:clipChildren="false"
        android:clipToPadding="false">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:clipChildren="false">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/trans_title"
                android:gravity="center">
            </TextView>
            <View
                android:id="@+id/anim_v_trans_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/calc_equal_background"
                android:layout_margin="10dp"
            />
        </LinearLayout>
        <View
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"

            android:layout_margin="10dp"/>

    </LinearLayout>

</LinearLayout>